--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
           width: 729px;
           margin: 0 auto;
         }
+
+        h1 {
+          text-align: center;
+          font-family: serif;
+        }
     </style>
 <!-- Start javascript/main.js -->
     <script src="./js/yabble.js"></script>
@@ -31,6 +36,7 @@
 <!-- Html -->
 <body>
     <div>
+      <h1>SoccerSim</h1>
         <div id="gjs-loader">
          Loading...
         </div>
