--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         h1 {
           text-align: center;
-          font-family: serif;
+          font-family: sans-serif;
         }
     </style>
 <!-- Start javascript/main.js -->
