--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <script src="./js/yabble.js"></script>
     <script src="./js/gamejs.min.js"></script>
     <script>
+        teamA = 'Team A';
+        teamB = 'Team B';
         require.setModuleRoot('./soccersim/');
         require.run('main')
     </script>
